@@ -3,42 +3,37 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/.
  */
-
-/**
- * @author Luis Iñesta Gelabert - linesta@iti.es | luiinge@gmail.com
- */
 package es.iti.wakamiti.test.util;
 
 
-import java.util.Arrays;
-import java.util.List;
-
+import es.iti.wakamiti.core.util.TokenParser;
 import org.assertj.core.api.Assertions;
 import org.junit.Test;
 
-import es.iti.wakamiti.core.util.TokenParser;
+import java.util.Arrays;
+import java.util.List;
 
 
 public class TestTokenParser {
 
     private static final List<String> TOKENS = Arrays.asList(
-        "mmmm",
-        "mm",
-        "dd",
-        "d",
-        "yyyy",
-        "yy",
-        "-",
-        "\\",
-        "/",
-        " "
+            "mmmm",
+            "mm",
+            "dd",
+            "d",
+            "yyyy",
+            "yy",
+            "-",
+            "\\",
+            "/",
+            " "
     );
 
 
     @Test
     public void testTokenParser1() {
         TokenParser parser = new TokenParser(
-            "mmmmmm/ ddd-yyyy-yy", TOKENS, Arrays.asList("'[^']*'")
+                "mmmmmm/ ddd-yyyy-yy", TOKENS, List.of("'[^']*'")
         );
         assertNextToken(parser, "mmmm");
         assertNextToken(parser, "mm");
@@ -56,7 +51,7 @@ public class TestTokenParser {
     @Test
     public void testTokenParser2() {
         TokenParser parser = new TokenParser(
-            "d' de 'mmmm' de 'yyyy", TOKENS, Arrays.asList("'[^']*'")
+                "d' de 'mmmm' de 'yyyy", TOKENS, List.of("'[^']*'")
         );
         assertNextToken(parser, "d");
         assertNextToken(parser, "' de '");
